# valify

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/source/: conf.py  exceptions.rst  index.rst  installation.rst  quickstart.rst  schema.rst  validators.rst
src/valify/: __init__.py  exceptions.py  schema.py  validators.py
src/valify/github/workflows/: ci.yml
tests/: test_schema.py  test_validators.py
