[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "valify"
version = "0.3.0"
description = "A composable, expressive data validation library for python"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"

authors = [
    {name = "Darshan Bamankar", email = "darshanbamankar7@gmail.com"}
]
keywords = ["validation", "schema", "data"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules", 
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]