[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "valify"
version = "0.5.0"
description = "A composable, expressive data validation library for python"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"

authors = [
    {name = "Darshan Bamankar", email = "darshanbamankar7@gmail.com"}
]
keywords = ["validation", "schema", "data"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules", 
]

[project.urls]
Homepage = "https://github.com/DarshanBamankar/valify"
Documentation = "https://valify.readthedocs.io"
Repository = "https://github.com/DarshanBamankar/valify"
"Bug Tracker" = "https://github.com/DarshanBamankar/valify/issues"

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]